compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__not_a_constructor_update.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1660
expression: "\npub type Person {\n  Person(name: String, age: Int)\n}\npub fn identity(a) { a }\npub fn update_person(person: Person) {\n  identity(..person)\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
  Person(name: String, age: Int)
}
pub fn identity(a) { a }
pub fn update_person(person: Person) {
  identity(..person)
}

----- ERROR
error: Invalid record constructor
  ┌─ /src/one/two.gleam:7:3
  │
7 │   identity(..person)
  │   ^^^^^^^^ This is not a record constructor

Only record constructors can be used with the update syntax.
